generated/EasyXMLParser.py
# Generated from EasyXML.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class EasyXMLParser ( Parser ):

    grammarFileName = "EasyXML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'table'", "'cell'", "'attribute'", 
                     "'string'", "'int'", "'float'", "'elif'", "'else'", 
                     "'if'", "'for'", "'while'", "'in'", "'and'", "'or'", 
                     "'new'", "'return'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "';'", "<INVALID>", "'='", "'+='", "'.'", "':'", "'>'", 
                     "'<'", "'=='", "'!='", "'>='", "'<='", "'+'", "'-'", 
                     "'*'", "'/'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "ARRAY_TYPE", "TYPE", "ACTION_OPERATOR", 
                      "BOOL_OPERATOR", "ANDOR", "TABLE", "CELL", "ATTRIBUTE", 
                      "STRING", "INT", "FLOAT", "ELIF", "ELSE", "IF", "FOR", 
                      "WHILE", "IN", "AND", "OR", "NEW", "RETURN", "VARNAME", 
                      "NUMBER_LITERAL", "STRING_LITERAL", "WHITESPACE", 
                      "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_SQUAR_EBRACKET", 
                      "CLOSE_SQUARE_BRACKET", "OPEN_FIGURE_BRACKET", "CLOSE_FIGURE_BRACKET", 
                      "SEMICOLON", "QOUTES", "ASSIGMENT", "SUM_ASSIGMENT", 
                      "DOT", "COLON", "MORE_THAN", "LESS_THAN", "EQUAL", 
                      "NOT_EQUAL", "MORE_EQUAL", "LESS_EQUAL", "PlUS", "MINUS", 
                      "MULTIPLICATION", "DIVISION", "NOT", "COMMENT" ]

    RULE_var_init = 0
    RULE_assignment = 1
    RULE_sum_assignment = 2
    RULE_get = 3
    RULE_get_array_element = 4
    RULE_func_call = 5
    RULE_if_statement = 6
    RULE_if_block = 7
    RULE_else_if_block = 8
    RULE_else_block = 9
    RULE_for_statement = 10
    RULE_while_statement = 11
    RULE_func_init = 12
    RULE_type_cast = 13
    RULE_range_statement = 14
    RULE_condition = 15
    RULE_params = 16
    RULE_param = 17
    RULE_expression = 18
    RULE_get_operation = 19
    RULE_operation = 20
    RULE_xml = 21

    ruleNames =  [ "var_init", "assignment", "sum_assignment", "get", "get_array_element", 
                   "func_call", "if_statement", "if_block", "else_if_block", 
                   "else_block", "for_statement", "while_statement", "func_init", 
                   "type_cast", "range_statement", "condition", "params", 
                   "param", "expression", "get_operation", "operation", 
                   "xml" ]

    EOF = Token.EOF
    T__0=1
    ARRAY_TYPE=2
    TYPE=3
    ACTION_OPERATOR=4
    BOOL_OPERATOR=5
    ANDOR=6
    TABLE=7
    CELL=8
    ATTRIBUTE=9
    STRING=10
    INT=11
    FLOAT=12
    ELIF=13
    ELSE=14
    IF=15
    FOR=16
    WHILE=17
    IN=18
    AND=19
    OR=20
    NEW=21
    RETURN=22
    VARNAME=23
    NUMBER_LITERAL=24
    STRING_LITERAL=25
    WHITESPACE=26
    OPEN_BRACKET=27
    CLOSE_BRACKET=28
    OPEN_SQUAR_EBRACKET=29
    CLOSE_SQUARE_BRACKET=30
    OPEN_FIGURE_BRACKET=31
    CLOSE_FIGURE_BRACKET=32
    SEMICOLON=33
    QOUTES=34
    ASSIGMENT=35
    SUM_ASSIGMENT=36
    DOT=37
    COLON=38
    MORE_THAN=39
    LESS_THAN=40
    EQUAL=41
    NOT_EQUAL=42
    MORE_EQUAL=43
    LESS_EQUAL=44
    PlUS=45
    MINUS=46
    MULTIPLICATION=47
    DIVISION=48
    NOT=49
    COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Var_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(EasyXMLParser.TYPE)
            else:
                return self.getToken(EasyXMLParser.TYPE, i)

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def ASSIGMENT(self):
            return self.getToken(EasyXMLParser.ASSIGMENT, 0)

        def NEW(self):
            return self.getToken(EasyXMLParser.NEW, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyXMLParser.ExpressionContext,0)


        def assignment(self):
            return self.getTypedRuleContext(EasyXMLParser.AssignmentContext,0)


        def ARRAY_TYPE(self):
            return self.getToken(EasyXMLParser.ARRAY_TYPE, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_var_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_init" ):
                return visitor.visitVar_init(self)
            else:
                return visitor.visitChildren(self)




    def var_init(self):

        localctx = EasyXMLParser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_var_init)
        self._la = 0 # Token type
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(EasyXMLParser.TYPE)
                self.state = 45
                self.match(EasyXMLParser.VARNAME)
                self.state = 46
                self.match(EasyXMLParser.ASSIGMENT)
                self.state = 47
                self.match(EasyXMLParser.NEW)
                self.state = 48
                self.match(EasyXMLParser.TYPE)
                self.state = 49
                self.match(EasyXMLParser.OPEN_BRACKET)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.VARNAME) | (1 << EasyXMLParser.NUMBER_LITERAL) | (1 << EasyXMLParser.STRING_LITERAL) | (1 << EasyXMLParser.OPEN_BRACKET))) != 0):
                    self.state = 50
                    self.expression(0)


                self.state = 53
                self.match(EasyXMLParser.CLOSE_BRACKET)
                self.state = 54
                self.match(EasyXMLParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                _la = self._input.LA(1)
                if not(_la==EasyXMLParser.ARRAY_TYPE or _la==EasyXMLParser.TYPE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 56
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def ASSIGMENT(self):
            return self.getToken(EasyXMLParser.ASSIGMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyXMLParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def NUMBER_LITERAL(self):
            return self.getToken(EasyXMLParser.NUMBER_LITERAL, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = EasyXMLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(EasyXMLParser.VARNAME)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.OPEN_BRACKET:
                self.state = 60
                self.match(EasyXMLParser.OPEN_BRACKET)
                self.state = 61
                self.match(EasyXMLParser.NUMBER_LITERAL)
                self.state = 62
                self.match(EasyXMLParser.CLOSE_BRACKET)


            self.state = 65
            self.match(EasyXMLParser.ASSIGMENT)
            self.state = 66
            self.expression(0)
            self.state = 67
            self.match(EasyXMLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sum_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def SUM_ASSIGMENT(self):
            return self.getToken(EasyXMLParser.SUM_ASSIGMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyXMLParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def NUMBER_LITERAL(self):
            return self.getToken(EasyXMLParser.NUMBER_LITERAL, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_sum_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum_assignment" ):
                return visitor.visitSum_assignment(self)
            else:
                return visitor.visitChildren(self)




    def sum_assignment(self):

        localctx = EasyXMLParser.Sum_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sum_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(EasyXMLParser.VARNAME)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.OPEN_BRACKET:
                self.state = 70
                self.match(EasyXMLParser.OPEN_BRACKET)
                self.state = 71
                self.match(EasyXMLParser.NUMBER_LITERAL)
                self.state = 72
                self.match(EasyXMLParser.CLOSE_BRACKET)


            self.state = 75
            self.match(EasyXMLParser.SUM_ASSIGMENT)
            self.state = 76
            self.expression(0)
            self.state = 77
            self.match(EasyXMLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(EasyXMLParser.VARNAME)
            else:
                return self.getToken(EasyXMLParser.VARNAME, i)

        def COLON(self):
            return self.getToken(EasyXMLParser.COLON, 0)

        def get(self):
            return self.getTypedRuleContext(EasyXMLParser.GetContext,0)


        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def params(self):
            return self.getTypedRuleContext(EasyXMLParser.ParamsContext,0)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_get

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet" ):
                return visitor.visitGet(self)
            else:
                return visitor.visitChildren(self)



    def get(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = EasyXMLParser.GetContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_get, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(EasyXMLParser.VARNAME)
            self.state = 81
            self.match(EasyXMLParser.COLON)
            self.state = 82
            self.match(EasyXMLParser.VARNAME)
            self._ctx.stop = self._input.LT(-1)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 92
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = EasyXMLParser.GetContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_get)
                        self.state = 84
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 85
                        self.match(EasyXMLParser.SEMICOLON)
                        pass

                    elif la_ == 2:
                        localctx = EasyXMLParser.GetContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_get)
                        self.state = 86
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 87
                        self.match(EasyXMLParser.OPEN_BRACKET)
                        self.state = 89
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.ARRAY_TYPE) | (1 << EasyXMLParser.TYPE) | (1 << EasyXMLParser.VARNAME) | (1 << EasyXMLParser.NUMBER_LITERAL) | (1 << EasyXMLParser.STRING_LITERAL) | (1 << EasyXMLParser.OPEN_BRACKET))) != 0):
                            self.state = 88
                            self.params()


                        self.state = 91
                        self.match(EasyXMLParser.CLOSE_BRACKET)
                        pass

             
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Get_array_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(EasyXMLParser.VARNAME)
            else:
                return self.getToken(EasyXMLParser.VARNAME, i)

        def OPEN_SQUAR_EBRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_SQUAR_EBRACKET, 0)

        def CLOSE_SQUARE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_SQUARE_BRACKET, 0)

        def NUMBER_LITERAL(self):
            return self.getToken(EasyXMLParser.NUMBER_LITERAL, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_get_array_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet_array_element" ):
                return visitor.visitGet_array_element(self)
            else:
                return visitor.visitChildren(self)




    def get_array_element(self):

        localctx = EasyXMLParser.Get_array_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_get_array_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(EasyXMLParser.VARNAME)
            self.state = 98
            self.match(EasyXMLParser.OPEN_SQUAR_EBRACKET)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==EasyXMLParser.VARNAME or _la==EasyXMLParser.NUMBER_LITERAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 100
            self.match(EasyXMLParser.CLOSE_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def params(self):
            return self.getTypedRuleContext(EasyXMLParser.ParamsContext,0)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = EasyXMLParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(EasyXMLParser.VARNAME)
            self.state = 103
            self.match(EasyXMLParser.OPEN_BRACKET)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.ARRAY_TYPE) | (1 << EasyXMLParser.TYPE) | (1 << EasyXMLParser.VARNAME) | (1 << EasyXMLParser.NUMBER_LITERAL) | (1 << EasyXMLParser.STRING_LITERAL) | (1 << EasyXMLParser.OPEN_BRACKET))) != 0):
                self.state = 104
                self.params()


            self.state = 107
            self.match(EasyXMLParser.CLOSE_BRACKET)
            self.state = 108
            self.match(EasyXMLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_block(self):
            return self.getTypedRuleContext(EasyXMLParser.If_blockContext,0)


        def else_if_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyXMLParser.Else_if_blockContext)
            else:
                return self.getTypedRuleContext(EasyXMLParser.Else_if_blockContext,i)


        def else_block(self):
            return self.getTypedRuleContext(EasyXMLParser.Else_blockContext,0)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_if_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = EasyXMLParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.if_block()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EasyXMLParser.ELIF:
                self.state = 111
                self.else_if_block()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.ELSE:
                self.state = 117
                self.else_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(EasyXMLParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(EasyXMLParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(EasyXMLParser.COLON, 0)

        def OPEN_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_FIGURE_BRACKET, 0)

        def CLOSE_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_FIGURE_BRACKET, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyXMLParser.OperationContext)
            else:
                return self.getTypedRuleContext(EasyXMLParser.OperationContext,i)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_if_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_block" ):
                return visitor.visitIf_block(self)
            else:
                return visitor.visitChildren(self)




    def if_block(self):

        localctx = EasyXMLParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(EasyXMLParser.IF)
            self.state = 121
            self.condition()
            self.state = 122
            self.match(EasyXMLParser.COLON)
            self.state = 123
            self.match(EasyXMLParser.OPEN_FIGURE_BRACKET)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.ARRAY_TYPE) | (1 << EasyXMLParser.TYPE) | (1 << EasyXMLParser.IF) | (1 << EasyXMLParser.FOR) | (1 << EasyXMLParser.WHILE) | (1 << EasyXMLParser.VARNAME) | (1 << EasyXMLParser.OPEN_BRACKET))) != 0):
                self.state = 124
                self.operation()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(EasyXMLParser.CLOSE_FIGURE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_if_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(EasyXMLParser.ELIF, 0)

        def condition(self):
            return self.getTypedRuleContext(EasyXMLParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(EasyXMLParser.COLON, 0)

        def OPEN_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_FIGURE_BRACKET, 0)

        def CLOSE_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_FIGURE_BRACKET, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyXMLParser.OperationContext)
            else:
                return self.getTypedRuleContext(EasyXMLParser.OperationContext,i)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_else_if_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_if_block" ):
                return visitor.visitElse_if_block(self)
            else:
                return visitor.visitChildren(self)




    def else_if_block(self):

        localctx = EasyXMLParser.Else_if_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_else_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(EasyXMLParser.ELIF)
            self.state = 133
            self.condition()
            self.state = 134
            self.match(EasyXMLParser.COLON)
            self.state = 135
            self.match(EasyXMLParser.OPEN_FIGURE_BRACKET)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.ARRAY_TYPE) | (1 << EasyXMLParser.TYPE) | (1 << EasyXMLParser.IF) | (1 << EasyXMLParser.FOR) | (1 << EasyXMLParser.WHILE) | (1 << EasyXMLParser.VARNAME) | (1 << EasyXMLParser.OPEN_BRACKET))) != 0):
                self.state = 136
                self.operation()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(EasyXMLParser.CLOSE_FIGURE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(EasyXMLParser.ELSE, 0)

        def COLON(self):
            return self.getToken(EasyXMLParser.COLON, 0)

        def OPEN_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_FIGURE_BRACKET, 0)

        def CLOSE_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_FIGURE_BRACKET, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyXMLParser.OperationContext)
            else:
                return self.getTypedRuleContext(EasyXMLParser.OperationContext,i)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_else_block
